# farehound

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  Dockerfile.ha  ROADMAP.md  TECHNICAL.md  config.yaml  pyproject.toml  repository.json
config/: airports.yaml
data/: airport_parking.json  flights.db  flights.db-shm  flights.db-wal  train_fares_eu.json  viable_airports_eu.json
docs/deployment/: cloudflare-tunnel.md
farehound/: Dockerfile  app-config.yaml  build.json  config.yaml  pyproject.toml  run.sh
farehound/config/: airports.yaml
farehound/src/: config.py  orchestrator.py
frontend/: DESIGN.md  README.md  app.js  deal.html  index.html  routes.html  settings.html
ha-addon/: config.yaml  lovelace-card.yaml  run.sh
roadmap/: deal-email-pipeline.md  value-prop-restoration.md
scripts/: debug_nearby.py  deploy-prompt.md  record_responses.py  routes.py  search_once.py
src/: config.py  orchestrator.py
src/alerts/: homeassistant.py  telegram.py
src/analysis/: nearby_airports.py  scorer.py  transport.py
tests/: test_bot.py  test_community.py  test_config.py  test_db.py  test_google_maps.py  test_homeassistant.py  test_integration_r7.py  test_models.py  test_nearby_airports.py  test_orchestrator.py  test_r9_onboarding_autofill.py  test_r9_render_integration.py  test_r9_web_endpoints.py  test_scorer.py  test_serpapi.py  test_serpapi_baggage.py  test_serpapi_directions.py  test_telegram.py  test_telegram_thin.py  test_transport_options.py  test_v08_release.py  test_v21_release.py  test_v22_release.py  test_web_auth.py  test_web_endpoints.py
(+49 files in other folders)
